various fixes for individual letter behaviors

--- a/hrl/index.html
+++ b/hrl/index.html
@@ -1,35 +1,75 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="he">
 <head>
+  <!-- UIkit CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/css/uikit-rtl.min.css" />
+
+  <!-- UIkit JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit-icons.min.js"></script>
   <link rel="stylesheet" href="css/tei.css">
   <script src="js/CETEI.js"></script>
+  <script src="js/behaviors.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
 </head>
-<body>
+<body class="uk-container">
 
-  <script type="text/javascript">
-    let c = new CETEI();
-    c.getHTML5('BenZvi_Goldberg.xml', function(data) {
-    document.getElementsByTagName("body")[0].appendChild(data);
-  });
-  let behaviors = {
-  "tei": {
-    "head": function(e) {
-      let level = document.evaluate("count(ancestor::tei-div)", e, null, XPathResult.NUMBER_TYPE, null);
-      let result = document.createElement("h" + level.numberValue);
-      for (let n of Array.from(e.childNodes)) {
-        result.appendChild(n.cloneNode());
-      }
-      return result;
-    },
-    "lb": ["<br/>"],
-  }
-};
-c.addBehaviors(behaviors);
-  </script>
+
+    <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
+      <div class="uk-navbar-right">
+        <ul class="uk-navbar-nav">
+          <li class="uk-active"><a href="">DARIAH/DESIR TEI Workshop 2019 @ Haifa</a></li>
+          <li class="uk-parent"><a href="">About</a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </div>
+    </nav>
+
+  <div class="uk-grid">
+    <div class ="uk-width-1-1 uk-margin-medium-bottom uk-margin-medium-top">
+      <h1 class="uk-text-lead letter-title">Shmulik to Tsipi</h1>
+    </div>
+
+    <div id="letter-container" class="uk-flex-auto">
+      <ul class="uk-subnav uk-subnav-pill" uk-switcher>
+        <li><a href="#">Transcription</a></li>
+        <li><a href="#">Facsimile</a></li>
+      </ul>
+      <ul class="uk-switcher uk-margin">
+        <li id="letter"></li>
+        <li id="facsimile" uk-lightbox></li>
+      </ul>
+    </div>
+    <div class="uk-flex-left uk-margin-xlarge-top">
+      <table class="uk-table uk-table-responsive uk-table-divider">
+        <caption>Metadata</caption>
+        <tbody>
+          <tr>
+            <th>Sender</th>
+            <td id="data-sender"></td>
+          </tr>
+          <tr>
+            <th>date</th>
+            <td id="data-dateSent"></td>
+          </tr>
+          <tr>
+            <th>Place</th>
+            <td id="data-placeSent"></td>
+          </tr>
+          <tr>
+            <th>Recipient</th>
+            <td id="data-recipient"></td>
+          </tr>
+          <tr>
+            <th>Place</th>
+            <td id="data-placeReceived"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
 </body>
 </html>
